--- a/wwwroot/assets/css/theme-6.css
+++ b/wwwroot/assets/css/theme-6.css
@@ -2798,3 +2798,28 @@ textarea {
     font-size: 18px; }
     .config-panel .close .svg-inline--fa {
       color: #fff; }
+
+.button {
+/*    padding: 15px 25px;*/
+    font-size: 24px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+/*    color: #fff;
+    background-color: #4CAF50;*/
+    border: none;
+    border-radius: .25rem;
+    box-shadow: 0 6px #999;
+}
+
+    .button:hover {
+        background-color: white;
+        color:black;
+    }
+
+    .button:active {
+        background-color: black;
+        color:white;
+        box-shadow: 0 4px #666;
+        transform: translateY(4px);
+    }
