--- a/Views/Home/EditForm.cshtml
+++ b/Views/Home/EditForm.cshtml
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;max-width: 80%;">
-                            <form class="p-3 pb-7 pt-3">
+                            <form asp-action="UpdateForm" method="post" class="p-3 pb-7 pt-3">
 
                                 <!--Row 0-->
                                 <div class="form-group row pt-3" style="margin-bottom: 10px!important;justify-content:center!important">
