--- a/Views/Home/AddBurial.cshtml
+++ b/Views/Home/AddBurial.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Submit Form";
+    ViewData["Title"] = "Add Burial";
 }
 
 @model FormViewModel
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;max-width: 80%;">
-                            <form asp-action="Form" method="post" class="p-3 pb-7 pt-3">
+                            <form asp-action="AddBurial" method="post" class="p-3 pb-7 pt-3">
 
                                 <!--Row 0-->
                                 <div class="form-group row pt-3" style="margin-bottom: 10px!important;justify-content:center!important">
@@ -98,10 +98,10 @@
 
                                     <!--Photo item-->
                                     <!--<div class="col-sm-3">
-            <label asp-for="Model.Burials.Photo" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Photo</label>
-            <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="Model.Burials.Photo" type="text" />
-            <span class="text-danger pl-3" asp-validation-for="Model.Burials.Photo"></span>
-        </div>-->
+                                        <label asp-for="Model.Burials.Photo" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Photo</label>
+                                        <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="Model.Burials.Photo" type="text" />
+                                        <span class="text-danger pl-3" asp-validation-for="Model.Burials.Photo"></span>
+                                    </div>-->
                                 </div>
 
                                 <!--Row 3-->
