--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                 <div id="navbar-collapse" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Form">Form</a></li>
+                        <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="AddBurial">Add Burial</a></li>
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="Burial">Burial Summary List & Records</a></li>
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle nav-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">More<i class="fas fa-angle-down"></i></a>
