Added a few different views with functionality

--- a/Views/Home/Burial.cshtml
+++ b/Views/Home/Burial.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Burial Page";
 }
 
-@model OperationDigger.Models.ViewModels.IndexViewModel
+@model OperationDigger.Models.ViewModels.BurialListViewModel
 <html>
 <head>
     <link rel="stylesheet" href="~/css/burialstyle.css">
