Added formatting to views

--- a/Views/Home/BurialDetails.cshtml
+++ b/Views/Home/BurialDetails.cshtml
@@ -65,7 +65,7 @@
                 <!--Form that will pass the data to the next view-->
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-12 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;max-width: 80%;">
+                        <div class="col-sm-12 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;">
                             <div class="text-left">
 
                                 <!--Row 1-->
