--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -23,7 +23,7 @@
                 <!--Form that will pass the data to the next view-->
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-10 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;max-width: 80%;">
+                        <div class="col-sm-10 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;">
                             <form asp-action="CreateBurial" class="p-3 pb-7 pt-3">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <!--Row 0-->
