--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
         </div><!--//container-->
     </header><!--//header-->
 
-    <div class="container">
+    <div class="container-xxl">
         <main>
             @RenderBody()
         </main>
