Added functionality to the Controller

--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -46,21 +46,21 @@
                                 <hr />
 
                                 <!--Row 1.2-->
-                                <div class="form-group row" style="margin-bottom: 10px!important;justify-content:center!important">
+                                <!--<div class="form-group row" style="margin-bottom: 10px!important;justify-content:center!important">-->
                                     <!--Burial N/S item-->
-                                    <div class="col-sm-3">
+                                    <!--<div class="col-sm-3">
                                         <label asp-for="BurialId" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Burial ID</label>
                                         <input class="form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="BurialId" type="number" />
                                         <span class="text-danger pl-3" asp-validation-for="BurialId"></span>
-                                    </div>
+                                    </div>-->
 
                                     <!--Hidden item-->
-                                    <div class="col-sm-3" style="visibility:hidden"></div>
+                                    <!--<div class="col-sm-3" style="visibility:hidden"></div>-->
 
                                     <!--Hidden item-->
-                                    <div class="col-sm-3" style="visibility:hidden"></div>
+                                    <!--<div class="col-sm-3" style="visibility:hidden"></div>
 
-                                </div>
+                                </div>-->
 
                                 <!--Row 1-->
                                 <div class="form-group row" style="margin-bottom: 10px!important;justify-content:center!important">
