Added some format to the views

--- a/Views/Home/BurialDetails.cshtml
+++ b/Views/Home/BurialDetails.cshtml
@@ -321,8 +321,8 @@
     <script src="assets/plugins/smoothscroll.min.js"></script>
     <script src="assets/js/main.js"></script>
 
-    <div>
-        <a asp-action="BurialList">Back to List</a>
+    <div class="m-3">
+        <a asp-action="BurialList">Back to Burial List</a>
     </div>
 
 </body>
