--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -259,8 +259,8 @@
     <script src="assets/plugins/smoothscroll.min.js"></script>
     <script src="assets/js/main.js"></script>
 
-    <div>
-        <a asp-action="BurialList">Back to List</a>
+    <div class="m-3 text-right">
+        <a asp-action="BurialList">Go to Burial List</a>
     </div>
 
     @section Scripts {
