Finishing touches on CRUD

--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -260,7 +260,7 @@
     <script src="assets/js/main.js"></script>
 
     <div class="m-3 text-right">
-        <a asp-action="BurialList">Go to Burial List</a>
+        <a class="button btn btn-sm btn-secondary px-4 pt-2 float-right" style="font-size:small!important;margin:10px!important" asp-action="BurialList">Go to Burial List</a>
     </div>
 
     @section Scripts {
