--- a/Views/Home/BurialDetails.cshtml
+++ b/Views/Home/BurialDetails.cshtml
@@ -1,51 +1,8 @@
 @model Burial
 
-@{ ViewData["Title"] = "Burial Details"; }
-
-@*<div>
-        <h4>Burial</h4>
-        <hr />
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.BurialId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.BurialId)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.LocationId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.LocationId)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.BurialNs)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.BurialNs)
-            </dd>
-        </dl>
-    </div>
-    <div>
-        <a asp-action="EditBurial" asp-route-id="@Model.BurialId">Edit</a> |
-        <a asp-action="BurialList">Back to List</a>
-    </div>*@
-
-
-    @*if (@Model. = "") 
-    {
-        <div class="col-sm-3"><p style="margin-bottom:0px!important;"><b>LocationId:</b> N/A</p></div>
-    }
-    else 
-    {
-        <div class="col-sm-3"><p style="margin-bottom:0px!important;"><b>LocationId:</b> @Model.LocationId</p></div>
-    }*@
-
-
-
-
+@{
+    ViewData["Title"] = "Burial Details";
+}
 
 <body class="job-single-page">
     <section class="heading-section section section-on-bg">
@@ -322,7 +279,7 @@
     <script src="assets/js/main.js"></script>
 
     <div class="m-3">
-        <a asp-action="BurialList">Back to Burial List</a>
+        <a class="button btn btn-sm btn-secondary px-4 pt-2 float-right" style="font-size:small!important;margin:10px!important" asp-action="BurialList">Back to Burial List</a>
     </div>
 
 </body>
