--- a/Views/Home/DeleteBurial.cshtml
+++ b/Views/Home/DeleteBurial.cshtml
@@ -4,46 +4,6 @@
     ViewData["Title"] = "Delete Burial";
 }
 
-@*<h1>@ViewData["Title"]</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Burial</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.BurialId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.BurialId)
-        </dd>
-
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LocationId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LocationId)
-        </dd>
-
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.BurialNs)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.BurialNs)
-        </dd>
-
-    </dl>
-    
-    <form asp-action="DeleteBurial">
-        <input type="hidden" asp-for="BurialId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="BurialList">Back to List</a>
-    </form>
-</div>*@
-
-
-
-
 <body class="job-single-page">
     <section class="heading-section section section-on-bg">
         <div class="hero-wrapper">
@@ -67,7 +27,7 @@
                                 <form asp-action="DeleteBurial">
                                     <input type="hidden" asp-for="BurialId" />
                                     <input class="button btn btn-lg btn-danger px-4 pt-2 float-right" style="font-size:xx-large!important;margin:10px!important;" type="submit" value="Yes" />
-                                    <button class="button btn btn-lg btn-success px-4 pt-2 float-right" style="font-size:xx-large!important;margin:10px!important;" asp-action="BurialList">No</button>
+                                    <a class="button btn btn-lg btn-success px-4 pt-2 float-right" style="font-size:xx-large!important;margin:10px!important;" asp-action="BurialList">No</a>
                                 </form>
                             </div>
 
@@ -84,8 +44,8 @@
     <script src="assets/plugins/smoothscroll.min.js"></script>
     <script src="assets/js/main.js"></script>
 
-    <div>
-        <a asp-action="BurialDetails" asp-route-id="@Model.BurialId">Go to Burial Details</a>
+    <div class="m-3">
+        <a class="button btn btn-sm btn-secondary px-4 pt-2 float-right" style="font-size:small!important;margin:10px!important" asp-action="BurialDetails" asp-route-id="@Model.BurialId">Go to Burial Details</a>
     </div>
 
 </body>
