--- a/Views/Home/EditBurial.cshtml
+++ b/Views/Home/EditBurial.cshtml
@@ -251,7 +251,7 @@
     <script src="assets/js/main.js"></script>
 
     <div class="m-3">
-        <a asp-action="BurialList">Back to Burial List</a>
+        <a class="button btn btn-sm btn-secondary px-4 pt-2 float-right" style="font-size:small!important;margin:10px!important" asp-action="BurialList">Back to Burial List</a>
     </div>
 
     @section Scripts {
