--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="CreateBurial">Create Burial</a></li>
                         <li class="nav-item"><a class="nav-link active" asp-controller="Home" asp-action="BurialList">Burial List</a></li>
                         <li class="nav-item dropdown">
-                            <a class="dropdown-toggle nav-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">More <i class="fas fa-angle-down"></i></a>
+                            <a class="dropdown-toggle nav-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">More<i class="fas fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-controller="Home" asp-action="AddNotes"> Add Field Notes</a></li>
                                 <li><a class="dropdown-item" asp-controller="Home" asp-action="AddMummy">Add Mummy Information</a></li>
@@ -78,23 +78,22 @@
                     <div class="footer-col-inner">
                         <h3 class="col-title">About</h3>
                         <ul class="footer-menu list-unstyled">
-                            <li><a class="text-link" href="#">Company</a></li>
-                            <li><a class="text-link" href="#">Blog</a></li>
-                            <li><a class="text-link" href="#">Jobs</a> <span class="badge bg-success">We're hiring</span></li>
-                            <li><a class="text-link" href="#">Press</a></li>
-                            <li><a class="text-link" href="#">Contact</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="#">Our Team</a><span class="badge bg-success">Hire Us!</span></li> 
+                            <li><a class="text-link" asp-controller="Home" asp-action="ContactPage">Contact Us</a></li>
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//footer-col-->
                 <div class="footer-col col-6 col-md-3">
                     <div class="footer-col-inner">
-                        <h3 class="col-title">Product</h3>
+                        <h3 class="col-title">More</h3>
                         <ul class="footer-menu list-unstyled">
-                            <li><a class="text-link" href="#">Features</a></li>
-                            <li><a class="text-link" href="#">Tutorials</a></li>
-                            <li><a class="text-link" href="#">Support Center</a></li>
-                            <li><a class="text-link" href="#">Mummy</a></li>
-                            <li><a class="text-link" href="#">Customers</a></li>
+                            <li><a  class="text-link" asp-controller="Home" asp-action="AddNotes">Add Field Notes</a></li>
+                            <li><a  class="text-link" asp-controller="Home" asp-action="AddMummy">Add Mummy Information</a></li>
+                            <li><a  class="text-link" asp-controller="Home" asp-action="DeleteRecords">Delete Records</a></li>
+                            <li><a  class="text-link" asp-controller="Home" asp-action="ManageUsers">Manage User Accounts</a></li>
+                            <li><a  class="text-link" asp-controller="Home" asp-action="UploadPhotos">Upload Photos</a></li>
+                            <li><a  class="text-link" asp-controller="Home" asp-action="UploadNotes">Upload Notes</a></li>
+                            <li><a  class="text-link" asp-controller="Home" asp-action="UploadBooks">Upload Books</a></li>
                         </ul>
                     </div>
                 </div><!--//footer-col-->
@@ -106,6 +105,7 @@
                             <li><a class="text-link" href="#">Login</a></li>
                             <li><a class="text-link" href="#">Become our partner</a></li>
                             <li><a class="text-link" href="#">FAQs</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="Burial">Burial Summary List & Records</a></li>
                         </ul>
                     </div>
                 </div><!--//footer-col-->
@@ -113,7 +113,7 @@
                     <div class="footer-col-inner">
                         <h3 class="col-title">Legal</h3>
                         <ul class="footer-menu list-unstyled">
-                            <li><a class="text-link" href="#">Privacy</a></li>
+                            <li><a class="text-link" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
                             <li><a class="text-link" href="#">Terms of Services</a></li>
                             <li><a class="text-link" href="#">Policies</a></li>
                         </ul>
@@ -125,12 +125,12 @@
                 <ul class="social-media list-inline">
                     <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-github"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/collinrlenon/intex" target="_blank"><i class="fab fa-github"></i></a></li>
                     <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
                     <li class="list-inline-item"><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
                 </ul>
 
-                <small class="copyright">BYU Intext Group 2-4 <a class="text-link" href="http://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a></small>
+                <small class="copyright">BYU Intext Group 2-2 | Audrey chigarira | Hayden Thomas | Collin Lenon | Garrett Farnsworth</small>
             </div>
         </div><!--//container-->
     </footer><!--//footer-->
@@ -144,8 +144,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="video-container ratio ratio-16x9">
-                        <iframe id="vimeo-video" src="https://player.vimeo.com/video/140875675?" width="720" height="405" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="autoplay; fullscreen"></iframe>
-                    </div><!--//video-container-->
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/5nEzCv5u1O8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    </div><!--//video-container-->
                 </div><!--//modal-body-->
             </div><!--//modal-content-->
         </div><!--//modal-dialog-->
